--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snowtop/ent",
-  "version": "0.1.0-alpha93-1d490c40-64b8-11ed-b751-67f2053f0ab9",
+  "version": "0.1.0-alpha94",
   "description": "snowtop ent framework",
   "main": "index.js",
   "types": "index.d.ts",
