--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -64,7 +64,7 @@ jobs:
     - name: Install pipenv
       run: |
         python -m pip install --upgrade pip 
-        pip install pipenv==2018.11.26
+        pip install pipenv
 
     - name: Install dependencies
       run: | 
