--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -61,17 +61,13 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pipenv-
     
-    - name: Install pipenv
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip 
-        pip install pipenv
-
-    - name: Install dependencies
-      run: | 
-        pipenv install -deploy -dev
+        pip install pytest
 
     - name: run test suite
       run: |
-        pipenv run pytest -svv
+        python -m pytest -svv
       env: 
         DB_CONNECTION_STRING: 'postgresql://postgres:postgres@localhost:5432'
