--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -63,7 +63,7 @@ jobs:
     - name: Install pipenv
       run: |
         python -m pip install --upgrade pip 
-        pip install pipenv=2022.11.11
+        pip install pipenv==2022.11.11
 
     - name: Install dependencies
       run: |
