try something else
https://github.com/pypa/pipenv/issues/4582#issuecomment-896343811

--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -67,7 +67,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pipenv install -deploy -dev
+        pipenv install -deploy --dev
 
     - name: run test suite
       run: |
