--- a/examples/ent-rsvp/backend/package.json
+++ b/examples/ent-rsvp/backend/package.json
@@ -37,9 +37,11 @@
     "csv-parse": "^4.15.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "glob": "^8.0.3",
     "graphql": "^16.5.0",
     "graphql-helix": "^1.12.0",
     "graphql-upload": "^13.0.0",
+    "jest-date-mock": "^1.0.8",
     "memoizee": "^0.4.15",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0"
@@ -51,13 +53,13 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.9",
     "@types/graphql-upload": "^8.0.11",
-    "@types/jest": "^28.1.6",
+    "@types/jest": "^29.2.3",
     "@types/jest-expect-message": "^1.0.3",
     "@types/luxon": "^2.0.4",
     "@types/passport": "^1.0.7",
     "@types/supertest": "^2.0.11",
-    "jest": "^28.1.3",
-    "ts-jest": "^28.0.7",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "tsconfig-paths": "^3.11.0"
   }
 }
