--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -22,15 +22,15 @@
     "@snowtop/ent-graphql-tests": "^0.1.0-alpha3",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
-    "@types/jest": "^28.1.6",
+    "@types/jest": "^29.2.3",
     "@types/jest-expect-message": "^1.0.3",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/supertest": "^2.0.11",
     "cookie-parser": "^1.4.5",
-    "jest": "^28.1.3",
+    "jest": "^29.3.1",
     "jest-date-mock": "^1.0.8",
     "supertest": "^6.1.3",
-    "ts-jest": "^28.0.7",
+    "ts-jest": "^29.0.3",
     "tsconfig-paths": "^3.11.0"
   },
   "dependencies": {
@@ -52,6 +52,7 @@
     "dataloader": "^2.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "glob": "^8.0.3",
     "graphql": "16.5",
     "graphql-type-json": "^0.3.2",
     "graphql-upload": "^13.0.0",
